Fixed matrix title alignment

--- a/styles.css
+++ b/styles.css
@@ -101,8 +101,6 @@ a:visited {
 
   min-width: 100px;
 
-  /*border: 1px solid #FFF;*/
-
   top: 0px;
   right: -100px;
 
@@ -124,6 +122,7 @@ a:visited {
   width: 800px;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
 }
 .legend {
   margin: 20px;
@@ -140,8 +139,8 @@ a:visited {
   margin-bottom: 5px;
 }
 #range-title {
-  margin-bottom: 20px;
   width: 500px;
+  height: 50px;
   text-align: center;
 }
 #matrix {
